# paddle_ocr_demo

./: .gitignore  main.py  pyproject.toml
src/: main.py
src/config/: globals.py
src/ocr/: paddle_ocr.py
src/routers/: ocr_api.py
src/utils/: log.py
