[project]
name = "paddle-ocr-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "paddleocr>=3.1.0",
    "paddlepaddle==3.1.0",
    "python-multipart>=0.0.20",
    "setuptools>=80.9.0",
]
